matmul-app/k8s/k8sconfig.yaml
apiVersion: v1                                      
kind: Service                                                           
metadata:                                                          
  name: matmul-frontend
  labels:                                                             
    app: matmul-frontend
    service: matmul-frontend
spec:                                                                       
  ports:                                                                               
  - name: http                                                                      
    port: 8000                                                                    
    targetPort: 8080
  selector:
    app: matmul-frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matmul-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matmul-frontend
      version: v1
  template:
    metadata:
      labels:
        app: matmul-frontend
        version: v1
    spec:
      containers:
      - image: gangmuk/matmul-frontend:latest
        imagePullPolicy: IfNotPresent
        name: matmul-frontend
        ports:
        - containerPort: 8080
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
---
apiVersion: v1
kind: Service
metadata:
  name: matmul-compute
  labels:
    app: matmul-compute
    service: matmul-compute
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8080
  selector:
    app: matmul-compute
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matmul-compute
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matmul-compute
      version: v1
  template:
    metadata:
      labels:
        app: matmul-compute
        version: v1
    spec:
      containers:
      - image: gangmuk/matmul-compute:latest
        imagePullPolicy: IfNotPresent
        name: matmul-compute
        ports:
        - containerPort: 8080
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
---
