matmul-app/k8s/gw_vs_dr.yaml
#########################################################################
###
# Gateway/VirtualService for HotelReservation frontend
###
#########################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: matmul-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
#########################################################################
###
# This config creates subsets based on clusters for the frontend,
# and does header-based route matching to the correct subset
# based on the x-slate-destination header
###
#########################################################################

# DestinationRule for frontend, subsetting by label.
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: matmul-frontend-destination
  namespace: default
spec:
  host: matmul-frontend
  subsets:
  - name: west
    labels:
      region: us-west-1
  - name: east
    labels:
      region: us-east-1
---
# Subset routing: if x-slate-destination is east, route to us-east, if west, route to west, if not set, random.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: matmul-gw
spec:
  hosts:
  - "*"
  gateways:
  - matmul-gateway
  http:
  - match:
    - headers:
        x-slate-destination:
          exact: east
    route:
    - destination:
        host: matmul-frontend
        subset: east
        port:
          number: 8000
  - match:
    - headers:
        x-slate-destination:
          exact: west
    route:
    - destination:
        host: matmul-frontend
        subset: west
        port:
          number: 8000
